--- a/style/components/buttons.scss
+++ b/style/components/buttons.scss
@@ -31,9 +31,20 @@
     aspect-ratio: 1 / 1;
   }
 
+  &.disabled {
+    cursor: default;
+  }
+
+  &.disabled svg {
+    opacity: 0.3;
+  }
+
   @media (hover) {
     &:hover .bg {
       background: var(--button-bg-hover-color);
+    }
+    &.disabled:hover .bg {
+      background: var(--button-bg-color);
     }
   }
 
