--- a/style/screens/screen-settings.scss
+++ b/style/screens/screen-settings.scss
@@ -8,15 +8,15 @@
   height: 100%;
   display: grid;
   // compute left margin for stable centering with or without scrollbar
-  --column-width: #{calc(
-      min(25rem, max(90vw, 100vw - sizes.$button-left - sizes.$button-right))
-    )};
+  --column-width: calc(
+    min(25rem, max(90vw, 100vw - var(--button-left) - var(--button-right)))
+  );
   grid-template-columns:
     calc((100vw - var(--column-width)) / 2)
     var(--column-width)
     1fr;
   grid-template-rows:
-    sizes.$button-top
+    var(--button-top)
     var(--small-navbar-height) min-content 1.2em;
   grid-template-areas: ". . ." ". navbar ." ". article ." ". . .";
   overflow-y: auto;
